implementacao da funcao de listagem de um elemento
