# service/swagger_output.json
@@ -81,7 +81,7 @@
         "tags": [
           "Service"
         ],
-        "description": "Endpoint for update service.",
+        "description": "Endpoint for delete service.",
         "parameters": [
           {
             "name": "accesstoken",
@@ -89,11 +89,39 @@
             "type": "string"
           },
           {
-            "name": "Register",
+            "name": "Delete",
             "in": "body",
-            "description": "Data for register",
+            "description": "Data for delete",
             "schema": {
-              "$ref": "#/definitions/DataUpdateService"
+              "$ref": "#/definitions/DataDeleteService"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/list": {
+      "post": {
+        "tags": [
+          "Service"
+        ],
+        "description": "Endpoint for list especific service.",
+        "parameters": [
+          {
+            "name": "accesstoken",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "Get",
+            "in": "body",
+            "description": "Data for list service",
+            "schema": {
+              "$ref": "#/definitions/DataListService"
             }
           }
         ],
@@ -178,6 +206,30 @@
         "newproductService",
         "newavgTimeService",
         "newcategoryService"
+      ]
+    },
+    "DataDeleteService": {
+      "type": "object",
+      "properties": {
+        "nameService": {
+          "type": "string",
+          "example": "Pintura de ambientes"
+        }
+      },
+      "required": [
+        "nameService"
+      ]
+    },
+    "DataListService": {
+      "type": "object",
+      "properties": {
+        "nameService": {
+          "type": "string",
+          "example": "Pintura de ambientes"
+        }
+      },
+      "required": [
+        "nameService"
       ]
     }
   }
